# src/apps/ipc/ipc_alarm/router.go
@@ -1,0 +1,7 @@
+package ipc_alarm
+
+import "CrestedIbis/src/global"
+
+func InitIpcAlarmRouter() {
+	global.HttpEngine.GET("/ipc/device/alarms", GetIpcAlarms)
+}
